# turnir

./: .gitignore  LICENSE  TODO  r  t  td-tool.cabal  turnir.cabal
src/: Common.hs  Main.hs  PairingEngine.hs  Parser.hs  Pretty.hs  RoundRobin.hs  ShellUtils.hs  TdTool.hs  TurnirShell.hs  Types.hs
test/: Tests.hs
